Set correct CSS variable for dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -370,12 +370,23 @@ section.row {
   --ifm-color-success-dark: #00b785;
   --ifm-color-success-darker: #00c795;
   --ifm-color-warning: #ffae72;
-  --ifm-color-warning-dark: #ffae72;
-  --ifm-color-warning-darker: #ffc9a1;
+  /*--ifm-color-warning-dark: #ffae72;
+  --ifm-color-warning-darker: #ffc9a1;*/
   --ifm-link-color: var(--ifm-color-info);
   --ifm-menu-color-active: var(--ifm-color-info);
   --ifm-color-content: #ffffff;
   --ifm-button-color: #ffffff;
+
+  --content--color: #ffffff !important;
+  --heading--color: #c9cdde !important;
+  --accordion--header-background-color--hover: var(
+    --ifm-hover-overlay
+  ) !important;
+  --status-badge--warning-background-color: var(
+    --ifm-color-warning-darker
+  ) !important;
+  --status-badge--warning-content-color: var(--ifm-color-warning) !important;
+  --status-icon--warning-color: var(--ifm-color-warning) !important;
 }
 
 [data-theme="dark"] .hero--primary {
